--- a/doc/nwpt14/NWPT14Contracts.tex
+++ b/doc/nwpt14/NWPT14Contracts.tex
@@ -64,7 +64,7 @@
 Banks and financial institutions nowadays often use domain-specific
 languages (DSLs) for describing complex financial contracts, in
 particular, for specifying how asset transfers for a specific contract
-depends on underlying observables, such as interest rates, currency
+depend on underlying observables, such as interest rates, currency
 rates, and stock prices.
 
 The seminal work by Peyton-Jones and Eber on financial
