--- a/doc/nwpt14/NWPT14Contracts.tex
+++ b/doc/nwpt14/NWPT14Contracts.tex
@@ -100,9 +100,9 @@ checked using the Coq proof assistant.
 
 Implementations of the contract language in Haskell and Coq are
 available on Github\footnote{See
-  \url{https://github.com/jberthold/contracts} together with
-  machine-checkable proofs (in Coq) of the key properties of the
-  contract language.}
+  \url{https://github.com/jberthold/contracts}.} together with
+machine-checkable proofs (in Coq) of the key properties of the
+contract language.
 
 \section{Contract Language}
 \label{sec:contract-language}
