last section covers only future work now

--- a/doc/nwpt14/NWPT14Contracts.tex
+++ b/doc/nwpt14/NWPT14Contracts.tex
@@ -312,18 +312,8 @@ the denotational semantics:
 \end{theorem}
 
 
-\section{Discussion and Future Work}
+\section{Future Work}
 \label{sec:disc-future-work}
-
-
-
-We have an implementation of the presented contract language as an
-EDSL in Haskell, including the surrounding contract management
-framework. The denotational semantics provides a solid foundation that
-both gives an intuitive understanding of contracts and facilitates
-formal reasoning in a theorem prover. Our implementation together with
-the accompanying Coq formalisation can be found at
-\url{https://github.com/jberthold/contracts}.
 
 For future work we plan to implement and certify more extensive
 analyses and transformations, e.g.\ scenario generation and
