--- a/doc/nwpt14/NWPT14Contracts.tex
+++ b/doc/nwpt14/NWPT14Contracts.tex
@@ -82,7 +82,7 @@ domain-specific contract language hosted in MLFi~\cite{MLFi}, a
 derivative of the functional programming language OCaml.
 
 In this paper, we present a small simple contract language, which
-rigorously relegates any artifacts of modeling and computation from
+rigorously relegates any artefacts of modelling and computation from
 its core. The language shares the same vision as the previously
 mentioned work with the addition that it (a) allows for specifying
 multi-party contracts (such as entire portfolios), (b) has good
@@ -93,9 +93,9 @@ options.
 
 We show that plenty of information can be derived from, and useful
 manipulations defined on, just the symbolic contract specification,
-independent of any stochastic aspects of the modeled contracts.
-Contracts modeled in our language are analysed and transformed for
-management according to a precise cash-flow semantics, modeled and
+independent of any stochastic aspects of the modelled contracts.
+Contracts modelled in our language are analysed and transformed for
+management according to a precise cash-flow semantics, modelled and
 checked using the Coq proof assistant.
 
 Implementations of the contract language in Haskell and Coq are
