comment on code extraction

--- a/doc/nwpt14/NWPT14Contracts.tex
+++ b/doc/nwpt14/NWPT14Contracts.tex
@@ -322,6 +322,12 @@ goal is to generate from a contract efficient code to calculate its
 payoff.
 
 
+At the moment the Haskell implementation is translated by hand into
+Coq definitions, which are the basis for the certification. This
+approach is beneficial for rapid prototyping, but our goal is to upend
+this process and automatically extract Haskell code from the Coq
+definitions.
+
 \bibliographystyle{abbrv}
 \bibliography{NWPT14Contracts}
 
