add my funding to acknowledgements

--- a/doc/nwpt14/NWPT14Contracts.tex
+++ b/doc/nwpt14/NWPT14Contracts.tex
@@ -34,9 +34,11 @@
 
 \begin{document}
 
-\title{Towards Certified Management of Financial Contracts\thanks{Work
-    partially supported by the Danish Council for Strategic Research
-    (DSF) under contract number 10-092299 (\textsc{Hiperfit}~\cite{TFP11Hiperfit}).}}
+\title{Towards Certified Management of Financial Contracts\thanks{This
+    work has been partially supported by the Danish Council for
+    Strategic Research under contract number 10-092299
+    (\textsc{Hiperfit}~\cite{TFP11Hiperfit}), and the Danish Council
+    for Independent Research under Project 12-132365.}}
 
 \titlerunning{Towards Certified Management of Financial Contracts}
 
