citation for reduction semantics

--- a/doc/nwpt14/NWPT14Contracts.bib
+++ b/doc/nwpt14/NWPT14Contracts.bib
@@ -29,3 +29,13 @@
   year = 	 {2012}
 }
 
+@Article{andersen06sttt,
+  Title                    = {Compositional specification of commercial contracts},
+  Author                   = {Andersen, Jesper and Elsborg, Ebbe and Henglein, Fritz and Simonsen, Jakob Grue and Stefansen, Christian},
+  Journal                  = {International Journal on Software Tools for Technology Transfer},
+  Year                     = {2006},
+  Number                   = {6},
+  Pages                    = {485--516},
+  Volume                   = {8},
+  Publisher                = {Springer-Verlag}
+}
