--- a/doc/nwpt14/NWPT14Contracts.tex
+++ b/doc/nwpt14/NWPT14Contracts.tex
@@ -102,7 +102,7 @@ checked using the Coq proof assistant.
 
 Implementations of the contract language in Haskell and Coq are
 available on Github\footnote{See
-  \url{https://github.com/jberthold/contracts}.} together with
+  \url{https://github.com/HIPERFIT/contracts}.} together with
 machine-checkable proofs (in Coq) of the key properties of the
 contract language.
 
