--- a/doc/nwpt14/NWPT14Contracts.tex
+++ b/doc/nwpt14/NWPT14Contracts.tex
@@ -326,9 +326,9 @@ payoff.
 
 At the moment the Haskell implementation is translated by hand into
 Coq definitions, which are the basis for the certification. This
-approach is beneficial for rapid prototyping, but our goal is to upend
-this process and automatically extract Haskell code from the Coq
-definitions.
+approach is beneficial for rapid prototyping, but our goal is to turn
+this process around and automatically extract Haskell code from the
+Coq definitions.
 
 \bibliographystyle{abbrv}
 \bibliography{NWPT14Contracts}
