--- a/doc/nwpt14/NWPT14Contracts.tex
+++ b/doc/nwpt14/NWPT14Contracts.tex
@@ -44,19 +44,17 @@
 
 \author{Patrick Bahr
     \and
-        Jost Berthold 
+        Jost Berthold
     \and 
-        Martin Elsman 
-    \and 
-        Fritz Henglein\\
+        Martin Elsman\\
 }
 
 \institute{University of Copenhagen\\
     Dept. of Computer Science (DIKU)\\
-    \email{\{paba,berthold,mael,henglein\}@di.ku.dk}\\
+    \email{\{paba,berthold,mael\}@di.ku.dk}\\
 }
 
-\authorrunning{Bahr, Berthold, Elsman, Henglein}
+\authorrunning{Bahr, Berthold, Elsman}
 
 \clearpage
 \maketitle
@@ -101,7 +99,7 @@ management according to a precise cash-flow semantics, modelled and
 checked using the Coq proof assistant.
 
 Implementations of the contract language in Haskell and Coq are
-available on Github\footnote{See
+available online\footnote{See
   \url{https://github.com/HIPERFIT/contracts}.} together with
 machine-checkable proofs (in Coq) of the key properties of the
 contract language.
